--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ if(rows.length === 0){
   "<div class='notfound'>Sheet kosong</div>";
   return;
 }
-
+console.log(rows);
 
 const cleanRows = rows.map(row => {
   const newRow = {};
