--- a/index.html
+++ b/index.html
@@ -1,69 +1,3 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tracking Permintaan Pengujian</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-
-<style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{
-  background: linear-gradient(135deg, #0b5394, #073763);
-  display:flex;justify-content:center;align-items:center;
-  min-height:100vh;padding:20px;
-}
-.container{
-  background:white;padding:40px;border-radius:20px;
-  width:100%;max-width:1200px;
-  box-shadow:0 20px 40px rgba(0,0,0,0.2);
-  text-align:center;
-}
-.logo{width:110px;margin-bottom:15px;}
-h2{color:#0b5394;margin-bottom:25px;font-weight:600;}
-.search-box{margin-bottom:30px;}
-input{
-  padding:14px 20px;width:60%;
-  border-radius:40px;border:1px solid #ccc;
-  outline:none;font-size:14px;
-}
-button{
-  padding:14px 30px;border:none;border-radius:40px;
-  background:#0b5394;color:white;font-weight:500;
-  cursor:pointer;margin-left:10px;
-}
-button:hover{background:#073763;}
-.table-wrapper{overflow-x:auto;}
-table{
-  width:100%;border-collapse:collapse;
-  margin-top:20px;font-size:13px;
-}
-th{background:#0b5394;color:white;padding:12px;}
-td{padding:10px;border-bottom:1px solid #eee;}
-tr:hover{background:#f2f6fb;}
-.notfound{margin-top:20px;color:red;font-weight:500;}
-.loading{margin-top:20px;color:#0b5394;font-weight:500;}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-
-<img src="logofix_bpmkp.png" class="logo">
-<h2>Tracking Status Permintaan Pengujian</h2>
-
-<div class="search-box">
-<input type="text" id="searchInput" placeholder="Masukkan Nomor Permintaan">
-<button onclick="searchData()">Cari</button>
-</div>
-
-<div id="result"></div>
-
-</div>
-
 <script>
 
 const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHurVp3MKLNA0mvWeNfN4IH8O05dCo-kc52FtiT7f_n0cpZum9mQ1VCLNObhkm0rpkgzwFPJPrRwY_/pub?gid=0&single=true&output=csv";
@@ -73,7 +7,7 @@ document.getElementById("searchInput").addEventListener("keypress", function(e){
 });
 
 function normalize(str){
-  return str?.toString().trim().toLowerCase();
+  return String(str || "").trim().toLowerCase();
 }
 
 async function searchData(){
@@ -93,37 +27,43 @@ const response = await fetch(url);
 const csv = await response.text();
 
 const parsed = Papa.parse(csv, { 
-  header: true,
+  header: false,
   skipEmptyLines: true 
 });
-console.log("HASIL PARSE:", parsed);
+
 const rows = parsed.data;
-console.log("ROWS:", rows);
-  
-if(rows.length === 0){
+
+if(rows.length < 2){
   document.getElementById("result").innerHTML =
-  "<div class='notfound'>Sheet kosong</div>";
+  "<div class='notfound'>Sheet kosong atau tidak valid</div>";
   return;
 }
-console.log(rows);
 
-const cleanRows = rows.map(row => {
-  const newRow = {};
-  Object.keys(row).forEach(key => {
-    const cleanKey = normalize(key);
-    newRow[cleanKey] = row[key];
-  });
-  return newRow;
-});
+// 🔥 Ambil header dari baris pertama
+const headers = rows[0].map(h => normalize(h));
+
+// 🔥 Cari index kolom Nomor Permintaan
+const nomorIndex = headers.findIndex(h => 
+  h.replace(/\s/g,'') === "nomorpermintaan"
+);
+
+if(nomorIndex === -1){
+  document.getElementById("result").innerHTML =
+  "<div class='notfound'>Kolom Nomor Permintaan tidak ditemukan</div>";
+  console.log("HEADER TERBACA:", headers);
+  return;
+}
 
 let found = false;
 let html = "";
 
-for(let row of cleanRows){
+// 🔥 Loop mulai dari baris ke-2 (index 1)
+for(let i = 1; i < rows.length; i++){
 
-  const nomorPermintaan = normalize(row["nomor permintaan"]);
+  const row = rows[i];
+  const nomor = normalize(row[nomorIndex]);
 
-  if(nomorPermintaan === keyword){
+  if(nomor.includes(keyword)){
 
     found = true;
 
@@ -131,34 +71,10 @@ for(let row of cleanRows){
     <div class="table-wrapper">
     <table>
       <tr>
-        <th>NAMA PELANGGAN</th>
-        <th>NOMOR PERMINTAAN</th>
-        <th>JUMLAH SAMPEL</th>
-        <th>JENIS PENGUJIAN</th>
-        <th>TGL BAYAR</th>
-        <th>PENYIAPAN</th>
-        <th>PENGUJIAN</th>
-        <th>SUBKONTRAK</th>
-        <th>PEMBUATAN LHP</th>
-        <th>LHP TERBIT</th>
-        <th>TGL TERBIT</th>
-        <th>ESTIMASI</th>
-        <th>KETERANGAN</th>
+        ${rows[0].map(h => `<th>${h}</th>`).join("")}
       </tr>
       <tr>
-        <td>${row["nama pelanggan"] || "-"}</td>
-        <td>${row["nomor permintaan"] || "-"}</td>
-        <td>${row["jumlah sampel"] || "-"}</td>
-        <td>${row["jenis pengujian"] || "-"}</td>
-        <td>${row["tgl bayar"] || "-"}</td>
-        <td>${row["penyiapan"] || "-"}</td>
-        <td>${row["pengujian"] || "-"}</td>
-        <td>${row["subkontrak"] || "-"}</td>
-        <td>${row["pembuatan lhp"] || "-"}</td>
-        <td>${row["lhp terbit"] || "-"}</td>
-        <td>${row["tgl terbit"] || "-"}</td>
-        <td>${row["estimasi"] || "-"}</td>
-        <td>${row["keterangan"] || "-"}</td>
+        ${row.map(cell => `<td>${cell || "-"}</td>`).join("")}
       </tr>
     </table>
     </div>
@@ -174,13 +90,11 @@ if(!found){
 document.getElementById("result").innerHTML = html;
 
 }catch(error){
+  console.error(error);
   document.getElementById("result").innerHTML =
-  "<div class='notfound'>Terjadi kesalahan mengambil data</div>";
+  "<div class='notfound'>Gagal mengambil data</div>";
 }
 
 }
 
 </script>
-
-</body>
-</html>
