Refactor searchData function and improve error handling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,70 @@
-<script>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tracking Permintaan Pengujian</title>
 
-document.addEventListener("DOMContentLoaded", function(){
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{
+  background: linear-gradient(135deg, #0b5394, #073763);
+  display:flex;justify-content:center;align-items:center;
+  min-height:100vh;padding:20px;
+}
+.container{
+  background:white;padding:40px;border-radius:20px;
+  width:100%;max-width:1200px;
+  box-shadow:0 20px 40px rgba(0,0,0,0.2);
+  text-align:center;
+}
+.logo{width:110px;margin-bottom:15px;}
+h2{color:#0b5394;margin-bottom:25px;font-weight:600;}
+.search-box{margin-bottom:30px;}
+input{
+  padding:14px 20px;width:60%;
+  border-radius:40px;border:1px solid #ccc;
+  outline:none;font-size:14px;
+}
+button{
+  padding:14px 30px;border:none;border-radius:40px;
+  background:#0b5394;color:white;font-weight:500;
+  cursor:pointer;margin-left:10px;
+}
+button:hover{background:#073763;}
+.table-wrapper{overflow-x:auto;}
+table{
+  width:100%;border-collapse:collapse;
+  margin-top:20px;font-size:13px;
+}
+th{background:#0b5394;color:white;padding:12px;}
+td{padding:10px;border-bottom:1px solid #eee;}
+tr:hover{background:#f2f6fb;}
+.notfound{margin-top:20px;color:red;font-weight:500;}
+.loading{margin-top:20px;color:#0b5394;font-weight:500;}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+<img src="logofix_bpmkp.png" class="logo">
+<h2>Tracking Status Permintaan Pengujian</h2>
+
+<div class="search-box">
+<input type="text" id="searchInput" placeholder="Masukkan Nomor Permintaan">
+<button onclick="searchData()">Cari</button>
+</div>
+
+<div id="result"></div>
+
+</div>
+
+<script>
 
 const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHurVp3MKLNA0mvWeNfN4IH8O05dCo-kc52FtiT7f_n0cpZum9mQ1VCLNObhkm0rpkgzwFPJPrRwY_/pub?gid=0&single=true&output=csv";
 
@@ -12,7 +76,7 @@ document.getElementById("searchInput").addEventListener("keypress", function(e){
   if(e.key === "Enter") searchData();
 });
 
-window.searchData = async function(){
+async function searchData(){
 
 const keyword = normalize(document.getElementById("searchInput").value);
 
@@ -42,8 +106,10 @@ if(rows.length < 2){
   return;
 }
 
+// Ambil header
 const headers = rows[0].map(h => normalize(h));
 
+// Cari kolom Nomor Permintaan
 const nomorIndex = headers.findIndex(h =>
   h.replace(/\s/g,'') === "nomorpermintaan"
 );
@@ -51,14 +117,15 @@ const nomorIndex = headers.findIndex(h =>
 if(nomorIndex === -1){
   document.getElementById("result").innerHTML =
   "<div class='notfound'>Kolom Nomor Permintaan tidak ditemukan</div>";
-  console.log("HEADER:", headers);
+  console.log("HEADER TERBACA:", headers);
   return;
 }
 
 let found = false;
 let html = "";
 
-for(let i=1; i<rows.length; i++){
+// Loop mulai baris ke-2
+for(let i = 1; i < rows.length; i++){
 
   const row = rows[i];
   const nomor = normalize(row[nomorIndex]);
@@ -92,11 +159,12 @@ document.getElementById("result").innerHTML = html;
 }catch(error){
   console.error(error);
   document.getElementById("result").innerHTML =
-  "<div class='notfound'>Gagal mengambil data</div>";
+  "<div class='notfound'>Terjadi kesalahan mengambil data</div>";
 }
 
 }
-
-});
 
 </script>
+
+</body>
+</html>
